feat: Full stack overhaul, premium UI redesign, and self-healing finance fixes